<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text" />

            <TextView
                android:id="@+id/name_text"
                style="@style/text_regular"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_weight="1"
                tools:text="testName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_text" />

            <TextView
                android:id="@+id/size_text"
                style="@style/text_regular"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_weight="1"
                tools:text="123" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_text" />

            <TextView
                android:id="@+id/company_text"
                style="@style/text_regular"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_weight="1"
                tools:text="testCompany" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:orientation="horizontal"
            tools:layout_marginBottom="@dimen/margin_small">

            <TextView
                android:id="@+id/textView7"
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_text" />

            <TextView
                android:id="@+id/description_text"
                style="@style/text_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="testDescrip[tion" />

        </LinearLayout>

    </LinearLayout>
</layout>