<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_side"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_side"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    style="@style/text_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_text" />

                <EditText
                    android:id="@+id/name_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@={shoe.name}"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_side"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_side"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    style="@style/text_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_text" />

                <EditText
                    android:id="@+id/size_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:text="@={``+ shoe.size}"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_side"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_side"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/text_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_text" />

                <EditText
                    android:id="@+id/company_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@={shoe.company}"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_side"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_side"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/text_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_text" />

                <EditText
                    android:id="@+id/description_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:text="@={shoe.description}"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/save_button" />
    </LinearLayout>
</layout>